workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/GarantiaGrupoOrcamento__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do grupo do orçamento</description>
    <label>Garantia do grupo do orçamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do grupo do orçamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>