workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/ClausulaReducaoFranquiaAcidente__c.field-meta.xml
<CustomField>
    <fullName>ClausulaReducaoFranquiaAcidente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clausula redução da franquia acidente</label>
    <type>Checkbox</type>
</CustomField>