workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/DescontoAgravoPercentualComercial__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoPercentualComercial__c</fullName>
    <label>Desconto agravo percentual comercial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>