workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/GrupoOrcamento__c.field-meta.xml
<CustomField>
    <fullName>GrupoOrcamento__c</fullName>
    <label>Grupo do orçamento</label>
    <referenceTo>GrupoOrcamento__c</referenceTo>
    <relationshipLabel>Garantias do grupo do orçamento</relationshipLabel>
    <relationshipName>GruposGarantiaOrcamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>