workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/IncluirFilhos__c.field-meta.xml
<CustomField>
    <fullName>IncluirFilhos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incluir filhos?</label>
    <type>Checkbox</type>
</CustomField>