workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/IncluirIndenizacaoEspecial__c.field-meta.xml
<CustomField>
    <fullName>IncluirIndenizacaoEspecial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incluir indenização especial?</label>
    <type>Checkbox</type>
</CustomField>