workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/PercentualFilhos__c.field-meta.xml
<CustomField>
    <fullName>PercentualFilhos__c</fullName>
    <label>Percentual filhos</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>