workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/PercentualReferenciado__c.field-meta.xml
<CustomField>
    <fullName>PercentualReferenciado__c</fullName>
    <label>Percentual referenciado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>