workspace-sf/force-app/main/default/objects/GarantiaGrupoOrcamento__c/fields/PremioPuroResseguro__c.field-meta.xml
<CustomField>
    <fullName>PremioPuroResseguro__c</fullName>
    <label>Prêmio puro resseguro R$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>